# filters-fun

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README  README.md  codingStyle.txt  controller.cpp  controller.h  fileReader.cpp  fileReader.h  filterBank.cpp  filterBank.h  log.txt  main.cpp  utility.cpp  utility.h
filter/: Makefile  blur.cpp  blur.h  bokeh.cpp  bokeh.h  filter.h  gamma.cpp  gamma.h  noise.cpp  noise.h  vignet.cpp  vignet.h
filter/include/: blur.h  bokeh.h  filter.h  gamma.h  noise.h  vignet.h
filter/src/: CMakeLists.txt  blur.cpp  bokeh.cpp  gamma.cpp  noise.cpp  vignet.cpp
gradient/: Makefile  ellipseGradient.cpp  ellipseGradient.h  gradient.h  linearGradient.cpp  linearGradient.h  pointGradient.cpp  pointGradient.h
gradient/include/: ellipseGradient.h  gradient.h  linearGradient.h  pointGradient.h
gradient/src/: CMakeLists.txt  ellipseGradient.cpp  linearGradient.cpp  pointGradient.cpp  utility.cpp
include/: controller.h  fileReader.h  filterBank.h  utility.h
opencvLib/: cv.pyd
src/: CMakeLists.txt  controller.cpp  fileReader.cpp  filterBank.cpp  main.cpp
window/: Makefile  gammaEditWindow.cpp  gammaEditWindow.h  imgEditWindow.cpp  imgEditWindow.h  uiWindow.h
window/include/: gammaEditWindow.h  imgEditWindow.h  uiWindow.h
window/src/: CMakeLists.txt  gammaEditWindow.cpp  imgEditWindow.cpp
