cmake_minimum_required(VERSION 2.8)

INCLUDE_DIRECTORIES(../include/)
SET(LIBEFFECT_SRC blur.cpp bokeh.cpp gamma.cpp noise.cpp vignet.cpp)

ADD_LIBRARY(effect SHARED ${LIBEFFECT_SRC})

FIND_PACKAGE(OpenCV REQUIRED)
TARGET_LINK_LIBRARIES(effect ${OpenCV_LIBS})

SET_TARGET_PROPERTIES(effect PROPERTIES OUTPUT_NAME "effect")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)


